@@ -5130,9 +5130,17 @@ OK (10 msec)</programlisting>
     <para><emphasis role="bold">Constant value</emphasis></para>
 
     <para>This will set the attribute to a constant value. You can also
-    specify wild cards to inject other attribute's values:</para>
+    specify wildcards to inject other attribute's values.</para>
 
-    <para>Wildcards</para>
+    <screenshot>
+      <mediaobject>
+        <imageobject>
+          <imagedata fileref="images/customFields28.png" />
+        </imageobject>
+      </mediaobject>
+    </screenshot>
+
+    <para>Wildcards:</para>
 
     <itemizedlist>
       <listitem>
@@ -5160,7 +5168,7 @@ OK (10 msec)</programlisting>
       </listitem>
 
       <listitem>
-        <para>(attribute): space if attribute is set</para>
+        <para>((attribute)): space if attribute is set</para>
       </listitem>
 
       <listitem>
@@ -5173,45 +5181,53 @@ OK (10 msec)</programlisting>
     memberUid=("user1", "user2") (specified value -&gt; resulting LDAP
     value):</para>
 
-    <itemizedlist>
-      <listitem>
-        <para>"my constant" -&gt; "my constant"</para>
-      </listitem>
+    <table border="1">
+      <caption></caption>
 
-      <listitem>
-        <para>"%gn%" -&gt; "Steve"</para>
-      </listitem>
+      <tr>
+        <th>Constant value</th>
 
-      <listitem>
-        <para>"%gn%(gn)%sn%" -&gt; "Steve Miller" (would be "Miller" if gn is
-        empty)</para>
-      </listitem>
+        <th>Resulting LDAP value</th>
+      </tr>
 
-      <listitem>
-        <para>"§memberUid|, §" -&gt; "user1, user2"</para>
-      </listitem>
-    </itemizedlist>
+      <tr>
+        <td>my constant</td>
 
-    <para id="customFields_validation_expressions_admin"><emphasis
-    role="bold">Validation expressions:</emphasis></para>
+        <td>my constant</td>
+      </tr>
 
-    <para>The validation expressions follow the standard of <ulink
-    url="http://perldoc.perl.org/perlre.html">Perl regular
-    expressions</ulink>. They start and end with a "/". The beginning of a
-    line is specified by "^" and the end by "$".</para>
+      <tr>
+        <td>%gn%</td>
 
-    <para>Examples:</para>
+        <td>Steve</td>
+      </tr>
 
-    <para>/^[a-z0-9]+$/ allows small letters and numbers. The value must not
-    be empty ("+").</para>
+      <tr>
+        <td>%gn%((gn))%sn%</td>
 
-    <para>/^[a-z0-9]+$/i allows small and capital letters ("i" at the end
-    means ignore case) and numbers. The value must not be empty ("+").</para>
+        <td>Steve Miller (would be "Miller" if gn is empty)</td>
+      </tr>
 
-    <para>Special characters that must be escaped with "\": "\", ".", "(",
-    ")"</para>
+      <tr>
+        <td>§memberUid|, §</td>
 
-    <para>E.g. /^[a-z0-9\.]$/i</para>
+        <td>user1, user2</td>
+      </tr>
+    </table>
+
+    <para></para>
+
+    <para>Presentation:</para>
+
+    <para>The LDAP value will be shown as text.</para>
+
+    <screenshot>
+      <mediaobject>
+        <imageobject>
+          <imagedata fileref="images/customFields29.png" />
+        </imageobject>
+      </mediaobject>
+    </screenshot>
 
     <literallayout>
 </literallayout>
@@ -5240,6 +5256,30 @@ OK (10 msec)</programlisting>
         </imageobject>
       </mediaobject>
     </screenshot>
+
+    <literallayout>
+</literallayout>
+
+    <para id="customFields_validation_expressions_admin"><emphasis
+    role="bold">Validation expressions:</emphasis></para>
+
+    <para>The validation expressions follow the standard of <ulink
+    url="http://perldoc.perl.org/perlre.html">Perl regular
+    expressions</ulink>. They start and end with a "/". The beginning of a
+    line is specified by "^" and the end by "$".</para>
+
+    <para>Examples:</para>
+
+    <para>/^[a-z0-9]+$/ allows small letters and numbers. The value must not
+    be empty ("+").</para>
+
+    <para>/^[a-z0-9]+$/i allows small and capital letters ("i" at the end
+    means ignore case) and numbers. The value must not be empty ("+").</para>
+
+    <para>Special characters that must be escaped with "\": "\", ".", "(",
+    ")"</para>
+
+    <para>E.g. /^[a-z0-9\.]$/i</para>
   </section>
 
   <section>
